Added About Us page with mission, values, and founder section

--- a/about.html
+++ b/about.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>About Us | SynexiAI</title>
+    <link rel="stylesheet" href="styles/main.css" />
 </head>
 <body>
+<header>
+    <h1>About SynexiAI</h1>
+    <nav>
+        <a href="index.html">Home</a> |
+        <a href="vision.html">Vision</a> |
+        <a href="contact.html">Contact</a>
+    </nav>
+</header>
 
+<main>
+    <section>
+        <h2>Our Mission</h2>
+        <p>SynexiAI exists to build a smarter, ethical, and AI-powered future. We are passionate technologists, dreamers, and creators working to design systems that solve real-world problems and empower humanity.</p>
+    </section>
+
+    <section>
+        <h2>Our Principles</h2>
+        <ul>
+            <li>🌐 Innovation with Purpose</li>
+            <li>🤝 Ethics and Trust in AI</li>
+            <li>💡 Open Collaboration</li>
+            <li>⚙️ High-Quality Engineering</li>
+            <li>🌱 Sustainable Impact</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Meet Our Founder</h2>
+        <p><strong>Venkat Sai Prasanth Kunchanapalli</strong> — Visionary technologist, AI engineer, and the force behind SynexiAI. He believes in blending ethical innovation with real-world solutions that last for decades.</p>
+    </section>
+</main>
+
+<footer>
+    <p>© 2025 SynexiAI. All rights reserved.</p>
+</footer>
 </body>
 </html>
