Added Vision page with 5, 10, 20-year goals

--- a/vision.html
+++ b/vision.html
@@ -1,10 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Our Vision | SynexiAI</title>
+    <link rel="stylesheet" href="styles/main.css" />
 </head>
 <body>
+<header>
+    <h1>Our Vision & Future Goals</h1>
+    <nav>
+        <a href="index.html">Home</a> |
+        <a href="about.html">About</a> |
+        <a href="contact.html">Contact</a>
+    </nav>
+</header>
 
+<main>
+    <section>
+        <h2>Our Vision</h2>
+        <p>We believe in an AI-augmented world where technology enhances human creativity, decision-making, sustainability, and well-being.</p>
+        <p>SynexiAI is not just building apps — we are creating a long-term innovation ecosystem that drives transformation in AI, microservices, infrastructure, education, and energy.</p>
+    </section>
+
+    <section>
+        <h2>5-Year Plan</h2>
+        <ul>
+            <li>🔧 Launch real-time AI platforms for business and developers</li>
+            <li>🚀 Build public APIs and AI assistants</li>
+            <li>🎓 Offer knowledge portals and microlearning systems</li>
+            <li>🌍 Begin partnerships with ethical AI communities</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>10-Year Vision</h2>
+        <ul>
+            <li>🏙️ Establish SynexiAI Labs — AI innovation & research hub</li>
+            <li>💼 Launch global B2B platforms for smart automation</li>
+            <li>🔗 Integrate SynexiAI with smart city infrastructure projects</li>
+            <li>📡 Pioneer cloud-integrated microservice data centers</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>20-Year Legacy</h2>
+        <ul>
+            <li>🏛️ Build the SynexiAI Renewable Smart City concept</li>
+            <li>🌐 Global SynexiAI Network connecting innovation hubs</li>
+            <li>💚 Universal AI for environment, health, and education</li>
+            <li>🤖 Next-gen AI with moral alignment and human-first design</li>
+        </ul>
+    </section>
+</main>
+
+<footer>
+    <p>© 2025 SynexiAI. Built for the next century.</p>
+</footer>
 </body>
 </html>
