--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Blog & Updates | SynexiAI</title>
     <link rel="stylesheet" href="styles/main.css" />
+    <!-- AOS CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+
 </head>
 <body>
 <header>
@@ -49,5 +52,14 @@
 <footer>
     <p>© 2025 SynexiAI. Built to inspire.</p>
 </footer>
+<!-- AOS Script -->
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script>
+    AOS.init({
+      duration: 1000,
+      offset: 120,
+      once: true,
+    });
+</script>
 </body>
 </html>
