--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>SynexiAI | Futuristic AI Company</title>
     <link rel="stylesheet" href="styles/main.css" />
+    <!-- AOS CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+
 </head>
 <body>
 <header>
@@ -22,6 +25,10 @@
         <h2>Who We Are</h2>
         <p>SynexiAI is a revolutionary technology initiative focused on AI, Microservices, and futuristic innovation. Our mission is to solve real-world problems using ethical and advanced AI systems.</p>
     </section>
+    <section data-aos="fade-up">
+        <h2>Our Vision</h2>
+        <p>We believe in a future where AI empowers everyone...</p>
+    </section>
 
     <section>
         <h2>Our Projects</h2>
@@ -32,5 +39,15 @@
 <footer>
     <p>© 2025 SynexiAI. All rights reserved.</p>
 </footer>
+<!-- AOS Script -->
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script>
+    AOS.init({
+      duration: 1000,
+      offset: 120,
+      once: true,
+    });
+</script>
+
 </body>
 </html>
