--- a/about.html
+++ b/about.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="SynexiAI is a visionary AI initiative building future-focused platforms, tools, and innovations in tech, AI, microservices, and infrastructure.">
+    <meta name="keywords" content="SynexiAI, Artificial Intelligence, AI Projects, AI Startup, Microservices, React, Spring Boot, Tech Company">
+    <meta name="author" content="Venkat Sai Prasanth Kunchanapalli">
+    <meta property="og:title" content="SynexiAI - Futuristic AI Company" />
+    <meta property="og:description" content="Explore the official SynexiAI portal. Learn about our mission, projects, and future goals." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.synexiai.online/" />
+    <meta property="og:image" content="https://www.synexiai.online/assets/logo.png" />
+    <meta name="twitter:card" content="summary_large_image">
     <title>About Us | SynexiAI</title>
     <link rel="stylesheet" href="styles/main.css" />
     <!-- AOS CSS -->
