--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="SynexiAI is a visionary AI initiative building future-focused platforms, tools, and innovations in tech, AI, microservices, and infrastructure.">
+    <meta name="keywords" content="SynexiAI, Artificial Intelligence, AI Projects, AI Startup, Microservices, React, Spring Boot, Tech Company">
+    <meta name="author" content="Venkat Sai Prasanth Kunchanapalli">
+    <meta property="og:title" content="SynexiAI - Futuristic AI Company" />
+    <meta property="og:description" content="Explore the official SynexiAI portal. Learn about our mission, projects, and future goals." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.synexiai.online/" />
+    <meta property="og:image" content="https://www.synexiai.online/assets/logo.png" />
+    <meta name="twitter:card" content="summary_large_image">
     <title>SynexiAI | Futuristic AI Company</title>
     <link rel="stylesheet" href="styles/main.css" />
     <!-- AOS CSS -->
@@ -25,11 +35,14 @@
         <h2>Who We Are</h2>
         <p>SynexiAI is a revolutionary technology initiative focused on AI, Microservices, and futuristic innovation. Our mission is to solve real-world problems using ethical and advanced AI systems.</p>
     </section>
+    <section>
+        <h2>Our Mission</h2>
+        <p>We exist to build a smarter, ethical, and AI-powered future. Our goal is to create systems that enhance human creativity, decision-making, and well-being.</p>
+    </section>
     <section data-aos="fade-up">
         <h2>Our Vision</h2>
         <p>We believe in a future where AI empowers everyone...</p>
     </section>
-
     <section>
         <h2>Our Projects</h2>
         <p>We're building real-time platforms, intelligent systems, and developer-first tools for the AI-powered world.</p>
