Fix: add correct Google verification HTML content

--- a/google49b89f50c85b0a17.html
+++ b/google49b89f50c85b0a17.html
@@ -1,1 +1,6 @@
-google-site-verification: google49b89f50c85b0a17.html
+<html>
+<head>
+    <meta name="google-site-verification" content="google49b89f50c85b0a17.html" />
+</head>
+<body></body>
+</html>
