--- a/google49b89f50c85b0a17.html
+++ b/google49b89f50c85b0a17.html
@@ -1,6 +1,7 @@
-<html>
+<html lang="">
 <head>
     <meta name="google-site-verification" content="google49b89f50c85b0a17.html" />
+    <title></title>
 </head>
 <body></body>
 </html>
