--- a/google49b89f50c85b0a17.html
+++ b/google49b89f50c85b0a17.html
@@ -1,7 +1,1 @@
-<html lang="">
-<head>
-    <meta name="google-site-verification" content="google49b89f50c85b0a17.html" />
-    <title></title>
-</head>
-<body></body>
-</html>
+google-site-verification: google49b89f50c85b0a17.html
