Fix: use correct HTML file format for Google site verification

--- a/google49b89f50c85b0a17.html
+++ b/google49b89f50c85b0a17.html
@@ -1,1 +1,8 @@
-google-site-verification: google49b89f50c85b0a17.html
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="google-site-verification" content="google49b89f50c85b0a17.html" />
+</head>
+<body>
+</body>
+</html>
