Add Latest files ownership

--- a/about.html
+++ b/about.html
@@ -12,7 +12,26 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.synexiai.online/" />
     <meta property="og:image" content="https://www.synexiai.online/assets/logo.png" />
-    <meta name="twitter:card" content="summary_large_image">
+    <!-- Basic SEO -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="SynexiAI is the future of Artificial Intelligence, IT, and Innovation. Discover our mission, vision, projects, and powerful tech journey." />
+    <meta name="keywords" content="SynexiAI, Artificial Intelligence, AI Startup, Futuristic Tech, Innovation, IT Solutions" />
+    <meta name="author" content="SynexiAI Team" />
+
+    <!-- Open Graph (Facebook/LinkedIn Preview) -->
+    <meta property="og:title" content="SynexiAI — Empowering the Future of AI & Technology" />
+    <meta property="og:description" content="Explore SynexiAI’s powerful journey in futuristic solutions, AI, and innovation." />
+    <meta property="og:image" content="https://www.synexiai.online/assets/banner.png" />
+    <meta property="og:url" content="https://www.synexiai.online" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SynexiAI — Official Website" />
+    <meta name="twitter:description" content="Explore our AI-powered future — projects, mission, vision, and more." />
+    <meta name="twitter:image" content="https://www.synexiai.online/assets/banner.png" />
+
     <title>About Us | SynexiAI</title>
     <link rel="stylesheet" href="styles/main.css" />
     <!-- AOS CSS -->
