--- a/index.html
+++ b/index.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Basic Meta -->
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="google-site-verification" content="CHN8RdwQmBpU_ReXw41S00dj39G4tEZRqxaytNGTXpI" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!-- SEO Meta Tags -->
-    <meta name="description" content="SynexiAI is a visionary AI initiative building future-focused platforms, tools, and innovations in tech, AI, microservices, and infrastructure.">
-    <meta name="keywords" content="SynexiAI, Artificial Intelligence, AI Projects, AI Startup, Microservices, React, Spring Boot, Tech Company">
-    <meta name="author" content="Venkat Sai Prasanth Kunchanapalli">
-    <meta property="og:title" content="SynexiAI - Futuristic AI Company" />
-    <meta property="og:description" content="Explore the official SynexiAI portal. Learn about our mission, projects, and future goals." />
+    <meta name="description" content="SynexiAI is a visionary AI initiative building future-focused platforms, tools, and innovations in tech, AI, microservices, and infrastructure." />
+    <meta name="keywords" content="SynexiAI, Artificial Intelligence, AI Startup, Microservices, React, Spring Boot, Tech Company, Futuristic Innovation" />
+    <meta name="author" content="Venkat Sai Prasanth Kunchanapalli" />
+
+    <!-- Open Graph (Facebook/LinkedIn) -->
+    <meta property="og:title" content="About Us - SynexiAI" />
+    <meta property="og:description" content="Learn more about the SynexiAI mission, our values, and the people behind the vision." />
+    <meta property="og:image" content="https://www.synexiai.online/assets/banner.png" />
+    <meta property="og:url" content="https://www.synexiai.online/about.html" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.synexiai.online/" />
-    <meta property="og:image" content="https://www.synexiai.online/assets/logo.png" />
-    <meta name="twitter:card" content="summary_large_image">
-    <title>SynexiAI | Futuristic AI Company</title>
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="About SynexiAI — Futuristic AI Company" />
+    <meta name="twitter:description" content="Explore the mission, principles, and founder behind SynexiAI." />
+    <meta name="twitter:image" content="https://www.synexiai.online/assets/banner.png" />
+
+    <title>About Us | SynexiAI</title>
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+
     <!-- AOS CSS -->
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-
 </head>
+
 <body>
 <header>
-    <h1>Welcome to SynexiAI</h1>
-    <p>The Future of AI, Technology, and Humanity.</p>
+    <h1>About SynexiAI</h1>
     <nav>
-        <a href="about.html">About</a> |
+        <a href="index.html">Home</a> |
         <a href="vision.html">Vision</a> |
         <a href="contact.html">Contact</a>
     </nav>
@@ -33,26 +43,31 @@
 
 <main>
     <section>
-        <h2>Who We Are</h2>
-        <p>SynexiAI is a revolutionary technology initiative focused on AI, Microservices, and futuristic innovation. Our mission is to solve real-world problems using ethical and advanced AI systems.</p>
-    </section>
-    <section>
         <h2>Our Mission</h2>
-        <p>We exist to build a smarter, ethical, and AI-powered future. Our goal is to create systems that enhance human creativity, decision-making, and well-being.</p>
+        <p>SynexiAI exists to build a smarter, ethical, and AI-powered future. We are passionate technologists, dreamers, and creators working to design systems that solve real-world problems and empower humanity.</p>
     </section>
+
     <section data-aos="fade-up">
-        <h2>Our Vision</h2>
-        <p>We believe in a future where AI empowers everyone...</p>
+        <h2>Our Principles</h2>
+        <ul>
+            <li>🌐 Innovation with Purpose</li>
+            <li>🤝 Ethics and Trust in AI</li>
+            <li>💡 Open Collaboration</li>
+            <li>⚙️ High-Quality Engineering</li>
+            <li>🌱 Sustainable Impact</li>
+        </ul>
     </section>
-    <section>
-        <h2>Our Projects</h2>
-        <p>We're building real-time platforms, intelligent systems, and developer-first tools for the AI-powered world.</p>
+
+    <section data-aos="fade-left">
+        <h2>Meet Our Founder</h2>
+        <p><strong>Venkat Sai Prasanth Kunchanapalli</strong> — Visionary technologist, AI engineer, and the driving force behind SynexiAI. He believes in building ethical, long-lasting, and human-centered solutions through the power of technology.</p>
     </section>
 </main>
 
 <footer>
     <p>© 2025 SynexiAI. All rights reserved.</p>
 </footer>
+
 <!-- AOS Script -->
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 <script>
@@ -62,6 +77,5 @@
       once: true,
     });
 </script>
-
 </body>
 </html>
