--- a/vision.html
+++ b/vision.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Basic Meta -->
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!-- SEO Meta Tags -->
-    <meta name="description" content="SynexiAI is a visionary AI initiative building future-focused platforms, tools, and innovations in tech, AI, microservices, and infrastructure.">
-    <meta name="keywords" content="SynexiAI, Artificial Intelligence, AI Projects, AI Startup, Microservices, React, Spring Boot, Tech Company">
-    <meta name="author" content="Venkat Sai Prasanth Kunchanapalli">
-    <meta property="og:title" content="SynexiAI - Futuristic AI Company" />
-    <meta property="og:description" content="Explore the official SynexiAI portal. Learn about our mission, projects, and future goals." />
+    <meta name="description" content="Discover SynexiAI's 5-year, 10-year, and 20-year vision for building a future powered by ethical AI, microservices, infrastructure, and global innovation." />
+    <meta name="keywords" content="SynexiAI Vision, AI Future, Futuristic Tech, Innovation, Smart Cities, AI Assistants, SynexiAI Labs, Renewable Smart City" />
+    <meta name="author" content="Venkat Sai Prasanth Kunchanapalli" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Our Vision | SynexiAI" />
+    <meta property="og:description" content="Explore SynexiAI’s future goals, from AI platforms to smart cities, and our 5-10-20 year roadmap for ethical innovation." />
+    <meta property="og:image" content="https://www.synexiai.online/assets/banner.png" />
+    <meta property="og:url" content="https://www.synexiai.online/vision.html" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.synexiai.online/" />
-    <meta property="og:image" content="https://www.synexiai.online/assets/logo.png" />
-    <meta name="twitter:card" content="summary_large_image">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SynexiAI — Our Vision for the Future" />
+    <meta name="twitter:description" content="Building the future with ethical AI, smart infrastructure, and global innovation." />
+    <meta name="twitter:image" content="https://www.synexiai.online/assets/banner.png" />
+
     <title>Our Vision | SynexiAI</title>
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+
     <!-- AOS CSS -->
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-
 </head>
+
 <body>
 <header>
     <h1>Our Vision & Future Goals</h1>
@@ -30,39 +42,39 @@
 </header>
 
 <main>
-    <section>
+    <section data-aos="fade-up">
         <h2>Our Vision</h2>
-        <p>We believe in an AI-augmented world where technology enhances human creativity, decision-making, sustainability, and well-being.</p>
-        <p>SynexiAI is not just building apps — we are creating a long-term innovation ecosystem that drives transformation in AI, microservices, infrastructure, education, and energy.</p>
+        <p>We believe in an AI-augmented world where technology empowers human creativity, decision-making, sustainability, and global well-being.</p>
+        <p>At SynexiAI, we’re building not just applications — but a long-term innovation ecosystem that transforms industries across AI, infrastructure, education, and renewable energy.</p>
     </section>
 
-    <section>
+    <section data-aos="fade-right">
         <h2>5-Year Plan</h2>
         <ul>
-            <li>🔧 Launch real-time AI platforms for business and developers</li>
-            <li>🚀 Build public APIs and AI assistants</li>
-            <li>🎓 Offer knowledge portals and microlearning systems</li>
-            <li>🌍 Begin partnerships with ethical AI communities</li>
+            <li>🔧 Launch real-time AI platforms for developers & businesses</li>
+            <li>🚀 Build powerful APIs & smart assistants for productivity</li>
+            <li>🎓 Deliver microlearning & knowledge portals globally</li>
+            <li>🌍 Partner with ethical AI and open-source communities</li>
         </ul>
     </section>
 
-    <section>
+    <section data-aos="fade-left">
         <h2>10-Year Vision</h2>
         <ul>
-            <li>🏙️ Establish SynexiAI Labs — AI innovation & research hub</li>
-            <li>💼 Launch global B2B platforms for smart automation</li>
-            <li>🔗 Integrate SynexiAI with smart city infrastructure projects</li>
-            <li>📡 Pioneer cloud-integrated microservice data centers</li>
+            <li>🏙️ Establish SynexiAI Labs — global AI innovation hubs</li>
+            <li>💼 Launch enterprise-level automation ecosystems</li>
+            <li>🔗 Integrate into smart city infrastructures</li>
+            <li>📡 Pioneer AI-driven, cloud-native microservice data centers</li>
         </ul>
     </section>
 
-    <section>
+    <section data-aos="fade-up">
         <h2>20-Year Legacy</h2>
         <ul>
-            <li>🏛️ Build the SynexiAI Renewable Smart City concept</li>
-            <li>🌐 Global SynexiAI Network connecting innovation hubs</li>
-            <li>💚 Universal AI for environment, health, and education</li>
-            <li>🤖 Next-gen AI with moral alignment and human-first design</li>
+            <li>🏛️ Build the SynexiAI Renewable Smart City project</li>
+            <li>🌐 Connect global AI innovation hubs through SynexiAI Network</li>
+            <li>💚 Deploy AI for health, education, and sustainability at scale</li>
+            <li>🤖 Develop next-gen AI aligned with ethics and humanity-first principles</li>
         </ul>
     </section>
 </main>
@@ -70,6 +82,7 @@
 <footer>
     <p>© 2025 SynexiAI. Built for the next century.</p>
 </footer>
+
 <!-- AOS Script -->
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 <script>
@@ -79,6 +92,5 @@
       once: true,
     });
 </script>
-
 </body>
 </html>
