--- a/blog.html
+++ b/blog.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Basic Meta -->
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!-- SEO Meta Tags -->
-    <meta name="description" content="SynexiAI is a visionary AI initiative building future-focused platforms, tools, and innovations in tech, AI, microservices, and infrastructure.">
-    <meta name="keywords" content="SynexiAI, Artificial Intelligence, AI Projects, AI Startup, Microservices, React, Spring Boot, Tech Company">
-    <meta name="author" content="Venkat Sai Prasanth Kunchanapalli">
-    <meta property="og:title" content="SynexiAI - Futuristic AI Company" />
-    <meta property="og:description" content="Explore the official SynexiAI portal. Learn about our mission, projects, and future goals." />
+    <meta name="description" content="Stay updated with the latest SynexiAI breakthroughs, engineering blogs, and future plans." />
+    <meta name="keywords" content="SynexiAI Blog, AI Updates, Tech Blog, AI Roadmap, Spring Boot, Microservices, Kafka, React" />
+    <meta name="author" content="Venkat Sai Prasanth Kunchanapalli" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="SynexiAI — Blog & Engineering Updates" />
+    <meta property="og:description" content="Explore our latest platform announcements, architectural insights, and SynexiAI’s vision roadmap." />
+    <meta property="og:image" content="https://www.synexiai.online/assets/banner.png" />
+    <meta property="og:url" content="https://www.synexiai.online/blog.html" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.synexiai.online/" />
-    <meta property="og:image" content="https://www.synexiai.online/assets/logo.png" />
-    <meta name="twitter:card" content="summary_large_image">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SynexiAI Blog & Updates" />
+    <meta name="twitter:description" content="News, architecture breakdowns, and visionary thoughts from SynexiAI." />
+    <meta name="twitter:image" content="https://www.synexiai.online/assets/banner.png" />
+
     <title>Blog & Updates | SynexiAI</title>
     <link rel="stylesheet" href="styles/main.css" />
-    <!-- AOS CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
 
+    <!-- AOS Animation -->
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
 </head>
+
 <body>
 <header>
     <h1>SynexiAI Blog & Updates</h1>
@@ -32,44 +44,40 @@
 </header>
 
 <main>
-    <section>
+    <section data-aos="fade-up">
         <h2>Latest Posts</h2>
 
-        <div class="blog-post">
+        <article class="blog-post" data-aos="fade-right">
             <h3>📢 Introducing the SynexiAI Platform</h3>
             <p class="date">July 13, 2025</p>
             <p>We’ve officially launched www.synexiai.online as the forever home of our mission, projects, and vision. Here's how we built it from 0 using HTML, JS, GitHub Pages & Actions...</p>
-            <a href="#">Read More</a>
-        </div>
+            <a href="#" class="btn">🔗 Read More</a>
+        </article>
 
-        <div class="blog-post">
+        <article class="blog-post" data-aos="fade-left">
             <h3>⚙️ Behind the Scenes: Inventory System Architecture</h3>
             <p class="date">July 10, 2025</p>
             <p>A deep dive into how we structured our Inventory Management Microservices using Spring Boot, Redis, Kafka, and JWT-secured APIs.</p>
-            <a href="#">Read More</a>
-        </div>
+            <a href="#" class="btn">📘 Read More</a>
+        </article>
 
-        <div class="blog-post">
+        <article class="blog-post" data-aos="fade-up">
             <h3>🌐 Planning the SynexiAI 2030 Roadmap</h3>
             <p class="date">July 1, 2025</p>
             <p>We're dreaming big. Here’s our 5, 10, and 20-year blueprint for AI-powered civic engagement, energy innovation, and decentralization.</p>
-            <a href="#">Read More</a>
-        </div>
-
+            <a href="#" class="btn">🧠 Read More</a>
+        </article>
     </section>
 </main>
 
 <footer>
     <p>© 2025 SynexiAI. Built to inspire.</p>
 </footer>
+
 <!-- AOS Script -->
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 <script>
-    AOS.init({
-      duration: 1000,
-      offset: 120,
-      once: true,
-    });
+    AOS.init({ duration: 1000, offset: 120, once: true });
 </script>
 </body>
 </html>
