--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Basic Meta -->
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!-- SEO Meta Tags -->
-    <meta name="description" content="SynexiAI is a visionary AI initiative building future-focused platforms, tools, and innovations in tech, AI, microservices, and infrastructure.">
-    <meta name="keywords" content="SynexiAI, Artificial Intelligence, AI Projects, AI Startup, Microservices, React, Spring Boot, Tech Company">
-    <meta name="author" content="Venkat Sai Prasanth Kunchanapalli">
-    <meta property="og:title" content="SynexiAI - Futuristic AI Company" />
-    <meta property="og:description" content="Explore the official SynexiAI portal. Learn about our mission, projects, and future goals." />
+    <meta name="description" content="Contact SynexiAI — reach out to our team of AI innovators, developers, and visionaries. Let's build the future together." />
+    <meta name="keywords" content="Contact SynexiAI, SynexiAI Team, AI Collaboration, Developer Connection, Startup Inquiry, Partnership, Investment" />
+    <meta name="author" content="Venkat Sai Prasanth Kunchanapalli" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Contact Us | SynexiAI" />
+    <meta property="og:description" content="Reach out to the SynexiAI team — developers, dreamers, and builders of a smarter future." />
+    <meta property="og:image" content="https://www.synexiai.online/assets/banner.png" />
+    <meta property="og:url" content="https://www.synexiai.online/contact.html" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.synexiai.online/" />
-    <meta property="og:image" content="https://www.synexiai.online/assets/logo.png" />
-    <meta name="twitter:card" content="summary_large_image">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Contact SynexiAI — Official Website" />
+    <meta name="twitter:description" content="Whether you're a dreamer, developer, or investor — we want to hear from you." />
+    <meta name="twitter:image" content="https://www.synexiai.online/assets/banner.png" />
+
     <title>Contact Us | SynexiAI</title>
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+
     <!-- AOS CSS -->
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-
 </head>
+
 <body>
 <header>
     <h1>Contact SynexiAI</h1>
@@ -30,9 +42,9 @@
 </header>
 
 <main>
-    <section>
-        <h2>We'd love to hear from you!</h2>
-        <p>Whether you're a developer, investor, partner, or dreamer — reach out and let's connect.</p>
+    <section data-aos="fade-up">
+        <h2>We’d love to hear from you</h2>
+        <p>Whether you're a developer, investor, partner, or visionary — get in touch and let's build the future together.</p>
 
         <form action="https://formspree.io/f/xyzpgkbo" method="POST">
             <label for="name">Name</label><br />
@@ -50,8 +62,9 @@
 </main>
 
 <footer>
-    <p>© 2025 SynexiAI. Let's build the future together.</p>
+    <p>© 2025 SynexiAI. Let’s build the future together.</p>
 </footer>
+
 <!-- AOS Script -->
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 <script>
