--- a/tech.html
+++ b/tech.html
@@ -2,23 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!-- SEO Meta Tags -->
-    <meta name="description" content="SynexiAI is a visionary AI initiative building future-focused platforms, tools, and innovations in tech, AI, microservices, and infrastructure.">
-    <meta name="keywords" content="SynexiAI, Artificial Intelligence, AI Projects, AI Startup, Microservices, React, Spring Boot, Tech Company">
-    <meta name="author" content="Venkat Sai Prasanth Kunchanapalli">
-    <meta property="og:title" content="SynexiAI - Futuristic AI Company" />
-    <meta property="og:description" content="Explore the official SynexiAI portal. Learn about our mission, projects, and future goals." />
+    <meta name="description" content="Explore the powerful technology stack behind SynexiAI — from microservices to AI tooling and cloud automation." />
+    <meta name="keywords" content="SynexiAI, Tech Stack, AI Tools, Spring Boot, Kafka, React, GitHub Actions, TensorFlow" />
+    <meta name="author" content="Venkat Sai Prasanth Kunchanapalli" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Technology Stack | SynexiAI" />
+    <meta property="og:description" content="The futuristic stack powering SynexiAI — Microservices, AI, DevOps, and more." />
+    <meta property="og:image" content="https://www.synexiai.online/assets/banner.png" />
+    <meta property="og:url" content="https://www.synexiai.online/tech.html" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.synexiai.online/" />
-    <meta property="og:image" content="https://www.synexiai.online/assets/logo.png" />
-    <meta name="twitter:card" content="summary_large_image">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SynexiAI — Our Tech Stack" />
+    <meta name="twitter:description" content="HTML, React, Spring Boot, Kafka, Docker, TensorFlow and more behind SynexiAI." />
+    <meta name="twitter:image" content="https://www.synexiai.online/assets/banner.png" />
+
     <title>Technology Stack | SynexiAI</title>
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+
     <!-- AOS CSS -->
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-
 </head>
+
 <body>
 <header>
     <h1>Our Technology Stack</h1>
@@ -32,7 +43,7 @@
 </header>
 
 <main>
-    <section>
+    <section data-aos="fade-up">
         <h2>Frontend</h2>
         <div class="tech-grid">
             <div class="tech-item">HTML5</div>
@@ -44,7 +55,7 @@
         </div>
     </section>
 
-    <section>
+    <section data-aos="fade-up">
         <h2>Backend & Microservices</h2>
         <div class="tech-grid">
             <div class="tech-item">Java</div>
@@ -56,7 +67,7 @@
         </div>
     </section>
 
-    <section>
+    <section data-aos="fade-up">
         <h2>Messaging & Caching</h2>
         <div class="tech-grid">
             <div class="tech-item">Apache Kafka</div>
@@ -65,7 +76,7 @@
         </div>
     </section>
 
-    <section>
+    <section data-aos="fade-up">
         <h2>Databases</h2>
         <div class="tech-grid">
             <div class="tech-item">PostgreSQL</div>
@@ -74,7 +85,7 @@
         </div>
     </section>
 
-    <section>
+    <section data-aos="fade-up">
         <h2>DevOps & Deployment</h2>
         <div class="tech-grid">
             <div class="tech-item">GitHub Actions</div>
@@ -85,7 +96,7 @@
         </div>
     </section>
 
-    <section>
+    <section data-aos="fade-up">
         <h2>AI & Tools</h2>
         <div class="tech-grid">
             <div class="tech-item">OpenAI API</div>
@@ -100,15 +111,11 @@
 <footer>
     <p>© 2025 SynexiAI. Powered by creativity and code.</p>
 </footer>
-<!-- AOS Script -->
+
+<!-- AOS -->
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 <script>
-    AOS.init({
-      duration: 1000,
-      offset: 120,
-      once: true,
-    });
+    AOS.init({ duration: 1000, offset: 120, once: true });
 </script>
-
 </body>
 </html>
