--- a/contact.html
+++ b/contact.html
@@ -32,14 +32,22 @@
 </head>
 
 <body>
-<header>
-    <h1>Contact SynexiAI</h1>
-    <nav>
-        <a href="index.html">Home</a> |
-        <a href="about.html">About</a> |
-        <a href="vision.html">Vision</a>
-    </nav>
+<header class="site-header">
+    <div class="container">
+        <div class="logo">SynexiAI</div>
+        <nav class="main-nav" id="mainNav">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="vision.html">Vision</a>
+            <a href="projects.html">Projects</a>
+            <a href="blog.html">Blog</a>
+            <a href="contact.html" class="active">Contact</a>
+            <a href="tech.html">Tech Stack</a>
+        </nav>
+        <div class="hamburger" id="hamburger">&#9776;</div>
+    </div>
 </header>
+
 
 <main>
     <section data-aos="fade-up">
@@ -74,5 +82,14 @@
       once: true,
     });
 </script>
+<script>
+    const hamburger = document.getElementById("hamburger");
+    const mainNav = document.getElementById("mainNav");
+
+    hamburger.addEventListener("click", () => {
+      mainNav.classList.toggle("show");
+    });
+</script>
+
 </body>
 </html>
