🚀 Deploy: Go live with SynexiAI on GitHub Pages

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="SynexiAI - Your AI-powered assistant for seamless task management and productivity." />
     <title>SynexiAI</title>
 </head>
 <body>
