--- a/index.html
+++ b/index.html
@@ -2,13 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="SynexiAI - Your AI-powered assistant for seamless task management and productivity." />
+    <meta name="description" content="SynexiAI - Your AI-powered assistant for seamless task management, innovation, and future tech." />
+
+    <!-- 🔐 CSP: Secure Google Fonts & Self Assets -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; script-src 'self'; connect-src 'self'; img-src 'self' data:;">
+
+    <!-- ✅ SEO -->
+    <meta name="robots" content="index, follow" />
+    <meta name="keywords" content="AI, SynexiAI, Task Automation, Future Tech, React App, Vite, Productivity, Innovation" />
+    <meta name="author" content="Venkat Sai Prasanth Kunchanapalli & SynexiAI Team" />
+
+    <!-- 🌐 Favicon -->
+    <link rel="icon" href="/assets/favicon.ico" />
+
+    <!-- 🧠 Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet" />
+
     <title>SynexiAI</title>
 </head>
-<body>
+<body class="bg-black text-white font-sans">
+<noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 <script type="module" src="/src/main.jsx"></script>
 </body>
