--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
     <meta name="description" content="SynexiAI - Your AI-powered assistant for seamless task management, innovation, and future tech." />
 
     <!-- 🔐 Final CSP: Fonts, Scripts, Google Fonts, Base64 support -->
-    <meta http-equiv="Content-Security-Policy" content="
-  default-src 'self';
-  script-src 'self' 'unsafe-inline';
-  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-  font-src https://fonts.gstatic.com;
-  img-src 'self' data:;
-  connect-src 'self';
-  object-src 'none';
-  base-uri 'self';
-">
+    <meta
+            http-equiv="Content-Security-Policy"
+            content="
+    default-src 'self';
+    script-src 'self' 'unsafe-inline';
+    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+    font-src 'self' https://fonts.gstatic.com data:;
+    img-src 'self' data:;
+    connect-src 'self';
+    object-src 'none';
+    base-uri 'self';
+  "
+    >
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 
