--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="SynexiAI - Your AI-powered assistant for seamless task management, innovation, and future tech." />
 
-    <!-- 🔐 CSP: lock down eval; allow inline where needed -->
+    <!-- 🔐 CSP: lock down eval; allow inline where needed; whitelist GitHub & chart hosts -->
     <meta
             http-equiv="Content-Security-Policy"
             content="
-      default-src 'self';
-      script-src  'self' 'unsafe-inline';
-      style-src   'self' 'unsafe-inline' https://fonts.googleapis.com;
-      font-src    'self' https://fonts.gstatic.com data:;
-      img-src     'self' data:;
-      connect-src 'self';
-      object-src  'none';
-      base-uri    'self';
-    "
+        default-src 'self';
+        script-src  'self' 'unsafe-inline';
+        style-src   'self' 'unsafe-inline' https://fonts.googleapis.com;
+        font-src    'self' https://fonts.gstatic.com data:;
+        img-src     'self' data: https://avatars.githubusercontent.com https://ghchart.rshah.org;
+        connect-src 'self' https://api.github.com;
+        object-src  'none';
+        base-uri    'self';
+      "
     />
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
