--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         style-src   'self' 'unsafe-inline' https://fonts.googleapis.com;
         font-src    'self' https://fonts.gstatic.com data:;
         img-src     'self' data: https://avatars.githubusercontent.com https://ghchart.rshah.org;
-        connect-src 'self' https://api.github.com;
+        connect-src 'self' https://api.github.com https://newsapi.org;
         object-src  'none';
         base-uri    'self';
       "
